# sdbrdd

./: CMakeLists.txt  build.bat  build.sh  build_linux.sh  build_maven.bat  build_windows.bat  conanfile.py  pom.xml
.conan/: clang18_profile  gcc13_profile  mingw_profile  msvc19_profile
.github/workflows/: cmake-multi-platform.yml
cmake/: HarbourCompiler.cmake
distribution/: pom.xml  readme.txt  releaseAll.bat
sdb-lck-server-app/: pom.xml
sdb-lck-server-app/src/main/c/: sdb_lock_server.c  sdb_lock_server_main.c
sdb-lck-server-headers/: pom.xml
sdb-lck-server-headers/src/main/headers/: sdb_lock_server.h
sdb-ora-headers/: pom.xml
sdb-ora-headers/src/main/headers/: sdb_oci.h  sdb_oci_lib.h  sdb_oci_lob.h  sdb_oci_rowid.h  sdb_oci_stmt.h  sdb_oci_types.h  sdb_oci_var.h  sdb_ora.h
sdb-ora-lib/: CMakeLists.txt  pom.xml
sdb-ora-lib/src/main/c/: sdb_oci.c  sdb_oci_lib.c  sdb_oci_lob.c  sdb_oci_rowid.c  sdb_oci_stmt.c  sdb_oci_var.c  sdb_ora_expr.c
sdb-rdd-headers/: pom.xml
sdb-rdd-headers/src/main/headers/: sdb.ch  sdb.h  sdb_api.h  sdb_area.h  sdb_connection.h  sdb_database.h  sdb_defs.h  sdb_dict.h  sdb_error.h  sdb_errors.ch  sdb_expr.h  sdb_field.h  sdb_index.h  sdb_info.h  sdb_lob.h  sdb_lock_client.h  sdb_log.h  sdb_param.h  sdb_product.h  sdb_record.h  sdb_schema.h  sdb_statement.h  sdb_table.h  sdb_thread.h  sdb_transaction.h  sdb_types.h  sdb_util.h
sdb-rdd-lib/: CMakeLists.txt  pom.xml
sdb-rdd-lib/src/main/c/: ClipperExpressionParser.c  ClipperExpressionParser.h  sdb_api.c  sdb_area.c  sdb_c_api.c  sdb_clipper_api.c  sdb_connection.c  sdb_database.c  sdb_dict.c  sdb_error.c  sdb_expr.c  sdb_field.c  sdb_index.c  sdb_info.c  sdb_lob.c  sdb_lock_client.c  sdb_log.c  sdb_param.c  sdb_product.c  sdb_rdd_api.c  sdb_record.c  sdb_schema.c  sdb_statement.c  sdb_table.c  sdb_thread.c  sdb_transaction.c  sdb_util.c
sdb-rdd-lib/src/main/clipper/: sdb_class_column_info.prg  sdb_class_connection.prg  sdb_class_lob.prg  sdb_class_result_set.prg  sdb_class_statement.prg  sdb_init.prg
sdb-rdd-lib/src/main/yapp/: ClipperExpr.gy
sdb-scripts/: create_objects.sql
